# FederatedLearning_-Simulation

./: README.md  plot_results.py
cfl/: pyproject.toml
cfl/cfl/: __init__.py  client_app.py  predictor.py  search.py  server_app.py  strategy.py  submodel.py
fairfed/: pyproject.toml
fairfed/fairfed/: client_app.py  server_app.py  strategy.py
fedavg/: pyproject.toml
fedavg/fedavg/: __init__.py  client_app.py  server_app.py
fedavg_kl/: pyproject.toml
fedavg_kl/fedavg_kl/: __init__.py  client_app.py  kmeans_dre.py  server_app.py  strategy.py
fedeve/: pyproject.toml
fedeve/fedeve/: __init__.py  client_app.py  server_app.py
fednova/: pyproject.toml
fednova/fednova/: __init__.py  client_app.py  server_app.py
fedprox/: pyproject.toml
fedprox/fedprox/: __init__.py  client_app.py  server_app.py
fl_common/: pyproject.toml
fl_common/fl_common/: __init__.py  client_helpers.py  compression.py  data.py  energy.py  metrics.py  server_runner.py  straggler.py  strategy.py  training.py
hfl_befl/: pyproject.toml
hfl_befl/hfl_befl/: __init__.py  befl_logic.py  client_app.py  server_app.py
hfl_befl_cfl/: pyproject.toml
hfl_befl_cfl/hfl_befl_cfl/: __init__.py  _local_imports.py  client_app.py  server_app.py  strategy.py
qfedavg/: pyproject.toml
qfedavg/qfedavg/: client_app.py  server_app.py  strategy.py
scaffold/: pyproject.toml
scaffold/scaffold/: __init__.py  client_app.py  server_app.py
