[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl_common"
version = "1.0.0"
description = "Code commun pour les projets FL (FedAvg/FedProx/FedNova/SCAFFOLD/FedEve/HFL-BEFL)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.26.0",
    "numpy>=1.26.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.3.0",
    "datasets>=2.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fl_common"]
