[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scaffold"
version = "1.0.0"
description = "SCAFFOLD (Karimireddy et al. 2020) avec control variates pour reduction de variance non-IID"
license = "Apache-2.0"
dependencies = [
    "fl_common>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scaffold"]

[tool.flwr.app]
publisher = "local"

[tool.flwr.app.components]
serverapp = "scaffold.server_app:app"
clientapp = "scaffold.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
local-epochs = 2
learning-rate = 0.01
batch-size = 32
num-clients = 10
partitioning = "noniid"
dirichlet-alpha = 0.3
data-heterogeneity = 0
epochs-heterogeneity = 0
early-stopping-patience = 0
early-stopping-min-delta = 0.001
# SCAFFOLD ne simule pas les stragglers (cf. client_app.py). Les options
# `straggler-sim` et `round-deadline-s` sont volontairement omises.
# Ratio manuel applique aux deux sens. Les options quant/sparse existent pour
# compat config mais sont ignorees par SCAFFOLD (control variates).
comm-size-ratio = 1.0
compression-quantization-bits = 32
compression-sparsity-ratio = 0.0
sim-model-mb = 0.0
energy-compute-tier0-j = 0.020
energy-compute-tier1-j = 0.010
energy-compute-tier2-j = 0.005
energy-comm-wan-tier0-w = 0.2
energy-comm-wan-tier1-w = 2.0
energy-comm-wan-tier2-w = 0.8
energy-comm-lan-tier0-w = 0.4
energy-comm-lan-tier1-w = 0.5
energy-comm-lan-tier2-w = 0.3
energy-edge-cloud-power-w = 5.0
# Momentum SGD. SCAFFOLD est INSTABLE avec momentum > 0 (divergence du training)
# car la correction (c_global - c_local) s'accumule dans le buffer momentum.
# DEFAULT = 0.0. Pour comparer fairement avec FedAvg : mets aussi momentum=0.0
# dans le run-config de fedavg.
momentum = 0.0
# LR serveur eta_g pour amortir la moyenne des deltas locaux. Sous non-IID +
# epochs-heterogeneity=1 (1/3/6 epochs), eta_g=1.0 oscille souvent; 0.5 est
# plus stable pour l'environnement IoT heterogene.
scaffold-server-lr = 0.5
# 1 = sample-weighted comme FedAvg (recommande si data-heterogeneity=1).
# 0 = SCAFFOLD canonique uniform-client, utile pour reproduction stricte.
scaffold-weighted-aggregation = 1
seed = -1
# Seed des partitions donnees, separe du seed runtime.
data-seed = 42
# Fraction de clients echantillonnes par round (McMahan 2017, parametre C).
# 1.0 = full participation. < 1.0 = participation partielle : SCAFFOLD reste
# theoriquement correct grace au facteur |S|/N dans la maj de c_global
# (Karimireddy 2020, Algo 1 ligne 17), DEJA implemente dans ScaffoldStrategy.
fraction-train = 1.0
# CORRECTIF audit V10 : modele actif (Net ou BigNet).
model-name = "net"


#######################################################################
# CONFIGURATION MIGRATION NOTICE:
#
# What was previously called "federation config" for SuperLink
# connections in pyproject.toml has been renamed and moved.
#
# These settings are now **SuperLink connection configuration**
# and are defined in the Flower configuration file.
#
# The entries below are commented out intentionally and are kept
# only as a migration reference.
#
# Docs: https://flower.ai/docs/framework/ref-flower-configuration.html
#######################################################################

# [tool.flwr.federations]
# default = "local-sim"

# [tool.flwr.federations.local-sim]
# options.num-supernodes = 10
